src/css/style.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

.container {
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
    margin-right: auto;
    width:  750px;
}


:root {
    --background-color : hsl(225, 18%, 90%);
    --background-color2: #ebf3f3;
    --text-color: rgb(76, 79, 105);
    --terminal-text-color: rgb(76, 79, 225);
    --light-text-color: #6B7280;
    --link-color: #e2ae8e;
    --link-hover-color: #DE9584;
    --bold-link-color: #d69183;
    --code-background-color:  rgb(205, 208, 216);
}


body {
    font-family: Arial, Inter, Georgia, "DIN Round Pro";
    background-color: var(--background-color);
    color: var(--text-color);
    font-size: 20px;
    font-weight: 400;
    letter-spacing: 0.5px;
    line-height: 1.6;
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem;
}

a {
    color: var(--link-color);
    text-decoration: none;
    font-weight:700;
    transition: 0.15S ease-in-out;
}
a:hover {
    color: var(--link-hover-color);
}

h1 {
    color: var(--heading-color);
    letter-spacing: -0.5px;
    margin: 10px 0px;
}

h2 {
    color: var(--heading-color);
    font-size: 30px;
}

strong, .strong {
    font-weight: 800;
    /* font-size: 33px; */
}

ul {
    list-style: disc;
}

li {
    color: rgb(76, 79, 105);
    font-size: 20px;
    font-weight: 400;
}

.hashtag {
    display: inline;
    font-size: 17.5px;
    font-weight: 400;
    line-height: 17.5px;
    background-color:  rgba(222, 149, 132, 0.1);
    border-bottom-color: rgba(222, 149, 132, 0.15);
    color: rgb(222, 149, 132);
    margin-bottom: 64px;
    border-radius: 35px;
    border-width: 10px;
    height: auto;
    padding: 4.375px 11.375px;
}
.hashtag:hover {
    background-color: rgba(222, 149, 132, 0.2);
}

hr{
    border-color: rgb(188, 192, 204);
    line-height: 30px;
    border-width: 0.4px;
}

code {
    background-color:  var(--code-background-color);
    padding-left: 7px;
    padding-right: 7px;
}

.code {
    background-color:  var(--code-background-color);
    overflow-x: scroll;
}

